--- a/index.html
+++ b/index.html
@@ -2,8 +2,24 @@
 <html>
 	<head>
 		<title>Title of the document</title>
+		<style>
+		.rounded {
+			-webkit-border-radius: 10px;
+			border-radius: 10px;
+		}
+		.mytable{
+			background-color:#f00;
+		}
+		</style>
 	</head>
 	<body>
 		The content of the document......
+		<table class="rounded mytable">
+			<tr>
+				<td>1</td>
+				<td>2</td>
+				<td>3</td>
+			</tr>
+		</table>
 	</body>
 </html> 
