--- a/index.html
+++ b/index.html
@@ -1,25 +1,144 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-	<head>
-		<title>Title of the document</title>
-		<style>
-		.rounded {
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Bootstrap, from Twitter</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+	<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
+	
+	<style>
+		#loginbox, #cancellogin {display:none;}
+		#loginbox {
+			background:#fefefe;
+			-webkit-box-shadow: 0px 0px 100px 0px rgba(0, 0, 0, 1);
+			box-shadow: 0px 0px 100px 0px rgba(0, 0, 0, 1);
+			padding:20px;
 			-webkit-border-radius: 10px;
 			border-radius: 10px;
 		}
-		.mytable{
-			background-color:#f00;
-		}
-		</style>
-	</head>
-	<body>
-		The content of the document......
-		<table class="rounded mytable">
-			<tr>
-				<td>1</td>
-				<td>2</td>
-				<td>3</td>
-			</tr>
-		</table>
-	</body>
-</html> 
+		#loginctl {text-align:center;margin-top:20px;}
+	</style>
+
+  </head>
+
+  <body>
+
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="#">Project name</a>
+          <div class="nav-collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+
+      <!-- Main hero unit for a primary marketing message or call to action -->
+      <div class="hero-unit">
+        <h1>Hello, world!</h1>
+        <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <a id="openlogin" class="btn btn-primary btn-large">Log ind</a>
+		<div id="loginbox" class="login">
+			<label for="user">Bruger</label>
+			<input type="text" id="user"><br />
+			<label for="pass">Kode</label>
+			<input type="text" id="pass"><br />
+			<p id="loginctl"><a id="login" class="btn btn-primary btn-large">Log ind</a> <a id="cancellogin" class="login btn btn-secondary btn-large">Fortryd</a></p>
+		</div>
+		
+      </div>
+
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="span4">
+          <h2>Heading</h2>
+		   <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <div class="slider"></div>
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div>
+        <div class="span4">
+          <h2>Heading</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+           <div class="slider"></div>
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+       </div>
+        <div class="span4">
+          <h2>Heading</h2>
+          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <div class="slider"></div>
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div>
+      </div>
+
+      <hr>
+
+      <footer>
+        <p>&copy; Company 2012</p>
+      </footer>
+
+    </div> <!-- /container -->
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.22/jquery-ui.min.js"></script>
+    <script src="js/bootstrap-transition.js"></script>
+    <script src="js/bootstrap-alert.js"></script>
+    <script src="js/bootstrap-modal.js"></script>
+    <script src="js/bootstrap-dropdown.js"></script>
+    <script src="js/bootstrap-scrollspy.js"></script>
+    <script src="js/bootstrap-tab.js"></script>
+    <script src="js/bootstrap-tooltip.js"></script>
+    <script src="js/bootstrap-popover.js"></script>
+    <script src="js/bootstrap-button.js"></script>
+    <script src="js/bootstrap-collapse.js"></script>
+    <script src="js/bootstrap-carousel.js"></script>
+    <script src="js/bootstrap-typeahead.js"></script>
+	<script>
+	$(document).ready(function() {
+	
+		$('.slider').slider({ range: 'min', value: 4500, min: 0, max: 10000, step: 50 });
+		$('.slider').bind('slidechange', function (e, ui) {
+			if ($(this).slider('value') < 4500) $(this).slider('value', 4500);
+		});
+		
+		/*$(".btn").on('hover', function (e) {
+			e.preventDefault();
+			$(this).draggable();
+		});*/
+		$("#openlogin").on('mousedown', function (e) {
+			e.preventDefault();
+			//$('#loginbox').slideDown();
+			$('#loginbox').css({opacity:0,display:'block',position:'absolute',zIndex:999,width:0,height:0});
+			$('#loginbox').animate({opacity:100, left:'50%', top:'50%', marginLeft:-150, marginTop:-100, width:300, height:200});
+			$('#cancellogin').fadeIn();
+			$('#cancellogin').on('mousedown', function() {
+				$('#loginbox').fadeOut(function() {
+					$(this).css({position:'static',left:0,top:0});
+				});
+				
+			});
+		});
+		
+	});
+	</script>
+  </body>
+</html>
